--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,11 @@ html{
 } */
 
 #header{
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    right: 0;
     height: 46px;
     background-color: #000;
 }
@@ -87,13 +92,41 @@ html{
 
 
 #slider{
-
+margin-top: 46px;
+padding-top: 50%;
+background: 
+    url('/assets/img/slider/slider1.jpg')
+    top center/
+    cover
+    no-repeat
+;
+position: relative;
+}
+.slider__caption{
+    color: #fff;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    padding-bottom: 48px;
+    left: 0;
+    right: 0;
 }
 
-#content{
-
+.slider__heading{
+    padding-bottom: 25px;
+    font-weight: 600;
+    font-size: 24px;
 }
+
+.slider__text{
+    font-size: 18px;
+    font-weight: 600;
+}
+
+/* #content{
+
+} 
 
 #footer{
 
-}
+} */
