--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,10 +142,12 @@ html{
     text-align: center;
     line-height: 46px;
     color: #fff;
-
 }
 .header__search i, .menu-mobile-btn i{
     color:inherit;
+}
+.menu-mobile-btn{
+    display: none;
 }
 .menu-mobile:hover{
     background-color: #ccc;
@@ -387,15 +389,33 @@ line-height: 1.5;
 
 /* mobile */
 @media (max-width:740px){
+    #nav{
+        display: block;
+        width: 100%;
+    }
     #nav>li{
         display: block;
+    }
+    #nav>li:first-child{
+        display: inline-block;
+    }
+    #nav .subnav{
+        position: initial;
+        background-color: #ccc;
+    }
+    #nav .subnav a{
+        color: #000;
+        padding:6px 41px;
     }
     #header{
         overflow: hidden;
         
     }
     .header__search{
-            display: none;
-        }
+        display: none;
+    }
+    .menu-mobile-btn{
+        display: block;
+    }
 }
 
