--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,15 +42,26 @@ a, i {
 .mt-16{
     margin-top: 16px !important;
 }
+.m-16{
+    margin: 16px !important;
+}
 .mt-32{
     margin-top: 32px !important;
+}
+.pd-8{
+    padding: 8px;
+}
+.pd-16{
+    padding: 16px;
+}
+.pd-32{
+    padding:32px;
 }
 .full-right{
     justify-content: flex-end !important;
 }
 .row{
     display: flex;
-    /* justify-content: space-between; */
     margin-left: -8px;
     margin-right: -8px;
 }
@@ -198,6 +209,7 @@ position: relative;
 .slider__text{
     font-size: 18px;
     font-weight: 600;
+    text-shadow: 0 0 1px #000;
 }
 
 /* #content{
@@ -381,6 +393,95 @@ line-height: 1.5;
 #footer a:hover{
     opacity: 0.4;
 }
+/* Modal */
+/* comon */
+.modal i{
+    color: inherit;
+}
+.modal{
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(0,0,0,0.4);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    display: none;
+}
+.modal.open{
+    display: flex;
+}
+.modal-container{
+    background: #fff;
+    max-width: 80%;
+    width: 900px;
+    min-height: 200px;
+    position: relative;
+}
+.modal-close-btn{
+    position: absolute;
+    top: 0;
+    right: 0;
+    color: #ffff;
+    padding: 16px;
+    cursor: pointer;
+    opacity: 1;
+}
+.modal-close-btn:hover{
+    opacity: 0.6;
+}
+.modal-header {
+    height: 130px;
+    color: #fff;
+    word-spacing: 3px;
+    font-size: 30px;
+    letter-spacing: 4px;
+    background-color: #009688;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.modal-body{
+    padding: 16px;
+}
+.modal label{
+    font-size: 15px;
+    display: block;
+}
+.modal-pay-btn{
+    background: #009688;
+    color: #fff;
+    text-transform: uppercase;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    opacity: 1;
+}
+.modal-pay-btn:hover{
+    opacity: 0.6;
+}
+.footer-close-btn{
+    color: #fff;
+    font-size: 15px;
+    background:#f44336;
+    padding: 16px 24px;
+    border: none;
+    cursor: pointer;
+}
+.footer-close-btn:hover{
+    opacity: .6;
+}
+.modal-footer{
+    display: flex;
+    justify-content: space-between;
+
+}
+.modal-footer a{
+    color: #2196f3;
+    cursor: pointer;
+}
 
 /* Responsive */
 /* pc */
@@ -409,7 +510,7 @@ line-height: 1.5;
     }
 }
 /* tablette */
-@media (max-width:1023px) and (min-width: 739px){
+@media (max-width:1023px) and (min-width: 740px){
     .contact-info{
         line-height: 2;
     }
@@ -417,7 +518,7 @@ line-height: 1.5;
 }
 
 /* mobile */
-@media (max-width:740px){
+@media (max-width:739px){
     .s-mt-8{
         margin-top: 8px !important;
     }
