--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -408,6 +408,7 @@ line-height: 1.5;
     display: flex;
     align-items: center;
     justify-content: center;
+    animation: modalFaceIn .5s ease;
     display: none;
 }
 .modal.open{
@@ -481,6 +482,17 @@ line-height: 1.5;
 .modal-footer a{
     color: #2196f3;
     cursor: pointer;
+}
+
+@keyframes modalFaceIn{
+    from{
+        transform: translateY(-150px);
+        opacity: 0;
+    }
+    to{
+        transform: translateY(0);
+        opacity: 1;
+    }
 }
 
 /* Responsive */
